Slimmed down project footprint significantly. Removed all unused code and modules. Made adjustments to Jupyter Notebook to improve usuability and refactored some of the code to improve readability and use python conventions

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.env
 __pycache__
 .ipynb_checkpoints
 *.pyc
+
+ignore
+
+data/complete/*
+!data/complete/.gitkeep
+
+data/output/*
+!data/output/.gitkeep
+
