--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ data/complete/*
 data/output/*
 !data/output/.gitkeep
 
+# don't keep data excep specified sample
+data/input/*
+!data/input/.gitkeep
