--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ data/output/*
 # don't keep data excep specified sample
 data/input/*
 !data/input/.gitkeep
+!data/input/start_end_courses-template.csv
