--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - python>=3.7.0
   - requests
   - jupyter
-  - pandas
+  - pandas=1.5.3
   - pip
   - pip:
       - canvasapi>=2.0.0
